test/grammar/types/var_type_annotation/type_fail_1/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:1:1
  |
1 | _name: str = 1
  | ^ expected str, got int(1)
  |